[package]
name = "merge-opt"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Easy merge Option<T1>, Option<T2> -> Option<M>."
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
repository = "https://github.com/HalsekiRaika/merge-opt.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
i3 = []
i4 = []
i5 = []
i6 = []
i7 = []
i8 = []
i9 = []
i10 = []
default = ["i3","i4","i5","i6","i7","i8","i9","i10"]